[Menus] - Fix spacing issue on menu cards

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
+    align-items: stretch;
     margin-bottom: 60px;
   }
 
@@ -44,8 +44,15 @@
 
     &__inner {
       position: relative;
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
       background-color: $color-white;
       padding: 0px 30px;
+
+      &__content {
+        flex-grow: 1;
+      }
 
       &__tag {
         background-color: $color-white;
